bsides-schedule-converter/src/formats/snapshots/bsides_schedule_converter__formats__sessionize__test__html.snap
---
source: bsides-schedule-converter/src/formats/sessionize.rs
expression: sessions
---
sessions:
  - title: Morning Keynote
    description: The morning keynote session
    speakers: []
    room: Track 1 - Exhibition Centre
    start: "09:45:00"
    end: "10:25:00"
  - title: What the Real AI Attacks of the Last Two Years Actually Taught Us
    description: "Many AI security talks deal in \"an attacker could.\" This one deals only in what actually happened."
    speakers:
      - Liana Anca Tomescu
    room: Track 1 - Exhibition Centre
    start: "10:25:00"
    end: "11:10:00"
  - title: QUICly Changing Network Comms
    description: "As defenses become more proactive and less reactive, the days of reliable unfettered egress to the internet are drawing to a close. At the same time, the increasing reliance on third parties necessitates increasing the size of the egress whitelist. The combination of the two requires a shift in C2 comms from relatively direct connections to infrastructure to proxying data via whitelisted services. Unfortunately, however, whitelisted services are often somewhat reluctant to get involved in even a simple shell-over-TLS connection, instead insisting on REST APIs, bespoke protocols, or worse."
    speakers:
      - Stuart McMurray
    room: Track 2 - Library Bar
    start: "10:25:00"
    end: "11:10:00"
  - title: "45,724 Networks, One Flipper Zero: Mapping the Wireless Threat Landscape of Northern Ireland"
    description: Nearly one in ten WiFi networks across Northern Ireland is still advertising WPS - a protocol the Wi-Fi Alliance deprecated in 2012 due to well-documented cryptographic weaknesses. Most network owners have no idea.
    speakers:
      - M0r3al
    room: Track 1 - Exhibition Centre
    start: "11:30:00"
    end: "12:15:00"
  - title: "OWASP PTK: Security Testing Where the Browser Is the Source of Truth"
    description: "Modern web applications are no longer simple request-and-response systems. They are authenticated, JavaScript-heavy, stateful, SPA-driven, and full of behaviour that only appears after a real user follows the right path through the browser. Traditional scanners and proxy-based workflows are powerful, but they can lose important context: the current user session, DOM state, client-side routes, tokens, storage, runtime JavaScript behaviour, and the exact sequence of actions that produced a finding."
    speakers:
      - Denis Podgurskii
    room: Track 2 - Library Bar
    start: "11:30:00"
    end: "12:15:00"
  - title: Mobile Application Penetration Testing 101
    description: "Mobile Applications are some of the most widely used pieces of technology by people. However, one side of penetration testing that isn't as well known is mobile application penetration testing."
    speakers:
      - Niall Caffrey
    room: Workshops - Penthouse
    start: "11:30:00"
    end: "13:00:00"
  - title: "Hacking Browsers: The Easy Way"
    description: "When you think of hacking browsers, you perhaps think of V8 heap exploitation, deep-dive fuzzing, crazy sandbox escapes, and so on. But what if I told you that you can still find vulnerabilities in major browsers that don’t require any technical knowledge? Bugs you can even run into by accident!"
    speakers:
      - Robbe Van Roey / PinkDraconian
    room: Track 1 - Exhibition Centre
    start: "12:15:00"
    end: "13:00:00"
  - title: "From Code to Coverage: A Detection Engineer's Journey Through the LDAP Wilderness"
    description: "Active Directory reconnaissance tools like BloodHound, Impacket, and SOAPHound are the attacker's first move in enterprise compromises, yet detecting their LDAP queries remains one of the hardest problems in security operations. This talk chronicles a six month journey from writing my first broken Sigma rule to building a complete, evasion resistant LDAP detection stack."
    speakers:
      - Andrew Schwartz
    room: Track 2 - Library Bar
    start: "12:15:00"
    end: "13:00:00"
  - title: Reverse Engineering an OAuth Supply Chain Attack
    description: "Let's reconstruct an OAuth supply chain attack."
    speakers:
      - art
    room: Track 1 - Exhibition Centre
    start: "13:45:00"
    end: "14:30:00"
  - title: "Post Quantum Cryptography: An Introduction in Plaintext"
    description: With the UK National Cyber Security Centre setting out timelines for migration to post-quantum cryptography - including completing discovery and planning by 2028 - the quantum future is no longer theoretical.
    speakers:
      - Lucy Bell
    room: Track 2 - Library Bar
    start: "13:45:00"
    end: "14:30:00"
  - title: "Inside the CSIRT: A Collaborative Live Incident Response Workshop"
    description: "Incident response frameworks tell us what responders should do, but how do security practitioners actually investigate and respond to an attack when working under pressure?"
    speakers:
      - Haula Galadima
    room: Workshops - Penthouse
    start: "13:45:00"
    end: "15:15:00"
  - title: "No CVV, No 3DS, No Problem: Chaining Trust Failures Across a Live Aviation Payment Stack"
    description: "Modern airline platforms operate across layered API architectures:"
    speakers:
      - Esat Berk Kandemir
    room: Track 1 - Exhibition Centre
    start: "14:30:00"
    end: "15:15:00"
  - title: "Air-Gapped Doesn't Mean Safe: Operational Security for Local AI Deployments"
    description: "Tokens are getting more expensive by the day and experts are saying local models are the way of the future for organizations that now rely on LLMs for coding and productivity. A local LLM deployment may keep your data on-premises, reduce privacy concerns, and let you stay in control, but it isn't a security solution. In the rush to stand up local AI infrastructure, organizations are making some of the same operational security mistakes that have plagued other air-gapped environments for decades."
    speakers:
      - Lillian Warner
    room: Track 2 - Library Bar
    start: "14:30:00"
    end: "15:15:00"
  - title: "Chaining the Unchainable: Finding and Exploiting Logic Flaws in Modern Web Architectures"
    description: "Most scanners will never find these bugs. This talk is about what happens when you chain enough of them together anyway. Spoiler: it ends in RCE and full tenant isolation bypass."
    speakers:
      - Raj Dhruv
    room: Track 1 - Exhibition Centre
    start: "15:40:00"
    end: "16:25:00"
  - title: "Bedtime Bug Hunting: A Friendly Android Auth Bypass Story"
    description: "One night, while lying in bed and idly poking around an Android app for a membership organisation I belong to, I found myself somewhere I did not expect to be: past the login flow."
    speakers:
      - Jeffrey Roe
    room: Track 2 - Library Bar
    start: "15:40:00"
    end: "16:00:00"
  - title: "Hands-On Threat Modelling: A Practical Workshop to Secure Your Product"
    description: "Shift from reactive security to proactive defence in this hands-on threat modelling workshop. You won't just hear about threat modelling; you'll do it. We'll guide you step-by-step through deconstructing a system, identifying potential threats, documenting your findings, and brainstorming effective mitigations. Learn a practical, repeatable process based on real-world application, empowering you to uncover vulnerabilities before attackers do. Walk away with the skills and confidence to implement threat modelling for your own products, fostering a stronger security posture. Ideal for engineers, architects, and PMs who want to build more secure software through practical application."
    speakers:
      - Adam
      - Maya McDevitt
    room: Workshops - Penthouse
    start: "15:40:00"
    end: "17:10:00"
  - title: "The Silent Risk in Your Browser: Detecting Malicious Extensions"
    description: "Browser extensions are used by millions of users and professionals inside of organizations, some for small tasks and others for more complex tasks and yet it's often ignored when it comes to security. Majority of organisations put all focus on the major points of infrastructure and overlook browser extensions."
    speakers:
      - Gherardo Buio Fiori
    room: Track 2 - Library Bar
    start: "16:00:00"
    end: "16:25:00"
  - title: "Leaks on the Livewire: How a Few Blocked Requests Led to a Shocking Discovery"
    description: "What started as unremarkable PHP deserialization attacks blocked by our Cloud WAF unravelled to reveal a sprawling credential theft operation. This talk walks through the full lifecycle of our investigation into exploit attempts against CVE-2025-54068 (a critical unauthenticated RCE in Laravel Livewire v3), from initial detection to recovery and analysis of the attacker's exfiltration infrastructure."
    speakers:
      - Daniel Johnston
    room: Track 1 - Exhibition Centre
    start: "16:25:00"
    end: "17:10:00"
  - title: Communicating with QR Codes
    description: We’ve all scanned a QR code to read a restaurant menu. But what if that menu was secret information that the restaurant was supposed to be hiding from us?
    speakers:
      - Ben Foxall
    room: Track 2 - Library Bar
    start: "16:25:00"
    end: "17:10:00"
  - title: Evening Keynote
    description: The closing keynote session.
    speakers:
      - Aleksandra Aytova
    room: Track 1 - Exhibition Centre
    start: "17:10:00"
    end: "17:50:00"
